Updated OTP based tracking