@@ -3,8 +3,6 @@ package com.pfsystem.service;
 import java.util.Date;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
-
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -50,7 +48,7 @@ public class RechargeSimService {
                     dto.setCategoryName(rechargePlan.getCategories());
                     return dto;
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public OrderIDDto createOrderID() {
